--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta charset="UTF-8">
     <title>My Website</title>
   </head>
