--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,11 @@
+<!-- Google API Client Library for JavaScript -->
+<script src="https://apis.google.com/js/api.js"></script>
+
+<!-- Google Sign-In SDK -->
+<meta name="google-signin-client_id" content="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com">
+
 <!doctype html>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <html lang="en">
 <head>
   <meta charset="utf-8">
