--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,30 @@
-<!-- Google API Client Library for JavaScript -->
+<!-- Load the Google API Client Library for JavaScript -->
 <script src="https://apis.google.com/js/api.js"></script>
-
-<!-- Google Sign-In SDK -->
+<!-- Set the client ID for Google Sign-In SDK -->
 <meta name="google-signin-client_id" content="845181127864-f9j8f32j0ufsfi4spn21tapsi0k3r9k2.apps.googleusercontent.com">
-
-<!doctype html>
-<script src="https://apis.google.com/js/platform.js" async defer></script>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>AuthClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Load Google Font Montserrat -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <!-- Load Bootstrap CSS -->
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
+  <!-- Add custom CSS -->
+  <style>
+    /* Add your custom styles here */
+  </style>
 </head>
 <body>
-  <app-root></app-root>
+  <!-- Add your app code here -->
+<app-root></app-root>
+
+  <!-- Load jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- Load Bootstrap JS bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
